# pytest-maybe-context

./: .gitignore  cspell.yaml  license.txt  pyproject.toml  readme.md
pytest_maybe_context/: __init__.py  main.py
tests/: test_main.py
